switch main page to lobby and convert wave string to integer